--- a/LV_PHUONG/LV_PHUONG/LV_PHUONG.csproj
+++ b/LV_PHUONG/LV_PHUONG/LV_PHUONG.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -57,9 +58,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="canbo.aspx" />
     <Content Include="css\main.css" />
-    <Content Include="donvi.aspx" />
-    <Content Include="Index.aspx" />
+    <Content Include="dangnhap.aspx" />
+    <Content Include="doimatkhau.aspx" />
+    <Content Include="index.aspx" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery-3.2.1.min.js" />
     <Content Include="js\main.js" />
@@ -83,19 +86,33 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="donvi.aspx.cs">
-      <DependentUpon>donvi.aspx</DependentUpon>
+    <Compile Include="canbo.aspx.cs">
+      <DependentUpon>canbo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="donvi.aspx.designer.cs">
-      <DependentUpon>donvi.aspx</DependentUpon>
+    <Compile Include="canbo.aspx.designer.cs">
+      <DependentUpon>canbo.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Index.aspx.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
+    <Compile Include="dangnhap.aspx.cs">
+      <DependentUpon>dangnhap.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Index.aspx.designer.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
+    <Compile Include="dangnhap.aspx.designer.cs">
+      <DependentUpon>dangnhap.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="doimatkhau.aspx.cs">
+      <DependentUpon>doimatkhau.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="doimatkhau.aspx.designer.cs">
+      <DependentUpon>doimatkhau.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="index.aspx.cs">
+      <DependentUpon>index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="index.aspx.designer.cs">
+      <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Master Page.Master.cs">
       <DependentUpon>Master Page.Master</DependentUpon>
@@ -128,6 +145,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
