--- a/LV_PHUONG/LV_PHUONG/bin/LV_PHUONG.dll.config
+++ b/LV_PHUONG/LV_PHUONG/bin/LV_PHUONG.dll.config
@@ -7,12 +7,21 @@
 
 <configuration>
     <connectionStrings>
-        <add name="attlptqx_LV_PHUONGNGOC_QLCTTD2ConnectionString" connectionString="Data Source=123.30.137.197;Initial Catalog=attlptqx_LV_PHUONGNGOC_QLCTTD2;Persist Security Info=True;User ID=attlptqx_phuongngoc;Password=Gwup15^3"
+        <add name="attlptqx_LV_PHUONGNGOC_QLCTTD2ConnectionString" connectionString="Data Source=123.30.137.197;Initial Catalog=attlptqx_LV_PHUONGNGOC_QLCTTD2;Persist Security Info=True;User ID=attlptqx_phuongngoc;Password=Uuna6*28"
+            providerName="System.Data.SqlClient" />
+        <add name="connstring" connectionString="Data Source=123.30.137.197;Initial Catalog=attlptqx_LV_PHUONGNGOC_QLCTTD2;Persist Security Info=True;User ID=attlptqx_phuongngoc;Password=Uuna6*28"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
+    <globalization
+      fileEncoding="utf-8"
+      requestEncoding="utf-8"
+      responseEncoding="utf-8"
+      culture="it-IT"
+      uiCulture="it-IT"
+    />
     </system.web>
 
 </configuration>
