--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /LV_PHUONG/.vs/LV_PHUONG/v15/Server/sqlite3/db.lock
+/LV_PHUONG/.vs/LV_PHUONG/v15/Server/sqlite3/storage.ide
+/.vs/LV_2018/v15/.suo
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/LV_PHUONG/.vs/config/applicationhost.config
+/LV_PHUONG/.vs/LV_PHUONG/v15/.suo
+/LV_PHUONG/.vs/LV_PHUONG/v15/Server/sqlite3/storage.ide-shm
+/LV_PHUONG/.vs/LV_PHUONG/v15/Server/sqlite3/storage.ide-wal
